--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -1,4 +1,4 @@
-site_name: Roblox Requests Documentation
+site_name: Roblox Requests
 repo_name: 'jpatrickdill/roblox-requests'
 repo_url: 'https://github.com/jpatrickdill/roblox-requests'
 
