--- a/.gitignore
+++ b/.gitignore
@@ -4,3 +4,6 @@ web/robloxrequests/
 .vscode
 .VSCodeCounter/
 testez-master/
+requests/node_modules/@humanwhocodes/config-array/api.js
+node_modules
+requests/node_modules
