--- a/requests/package.json
+++ b/requests/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "model",
+  "name": "roblox-requests",
   "version": "1.0.0",
   "main": "index.js",
   "license": "MIT",
@@ -14,9 +14,8 @@
     "@typescript-eslint/parser": "^5.46.1",
     "eslint": "^8.30.0",
     "eslint-plugin-roblox-ts": "^0.0.35",
+    "typedoc": "^0.23.23",
     "typescript": "^4.9.4"
   },
-  "dependencies": {
-    "@rbxts/testez": "^0.4.2-ts.0"
-  }
+  "dependencies": {}
 }
